--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,14 @@ body {
   height: 100%;
 }
 
+.transition-opacity {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.transition-transform {
+  transition: transform 0.3s ease-in-out;
+}
+
 /* It makes the HTML progress bar filling smooth when value change. */
 progress::-webkit-progress-value {
   transition: 0.6s width ease-out;
