--- a/app/globals.css
+++ b/app/globals.css
@@ -2,16 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 html {
-  overflow: hidden;
+  /* overflow: hidden; */
   height: 100%;
 }
 
 body {
   overflow: auto;
   height: 100%;
-  font-family: "Nunito", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .transition-opacity {
