--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@ html {
 body {
   overflow: auto;
   height: 100%;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
 .transition-opacity {
